
***** Switch Energy Calculator Modes

The =ref.scenario= element now has an /energy-calculator:/ property. This can take the values /SAP2012/ or /BREDEM2012/, and determines which rules will apply for this scenario.

There is a new counterfactual action =ref.energy-calculator=, which allows you to temporarily look at a house in a different energy calculator mode.

**** Removed Features

***** Occupancy
Deleted the =sap.occupancy= action. SAP occupancy is now automatically used when the energy calculator is in SAP 2012 mode.

***** Solar PV

We have removed /roof-coverage/ and /efficiency/ from =ref.measure.solar-photovoltaic=, and replaced them with /size/, which is the peak power rating of the installation measured in kW.

***** Responsiveness

The =scale.responsiveness= action has been removed. With hindsight, it was a bad feature, and we do not believe it has ever been used.

Removed the /of:/ property from =ref.house.heating-responsiveness=, since only the responsiveness of the primary space heating system is always relevant.

***** Thermal Mass

The NHM now uses a simplified method for calculating the thermal mass of a dwelling.

=wall.k-value= has been removed.

=ref.action.reset-floors=, =ref.action.reset-walls= and =ref.action.reset-roofs= have had their /k-value/ and /party-k-value/ properties removed.

**** Semantic Features

A number of actions in the NHM are designed for tweaking values from SAP tables. In SAP 2012 mode, they will no longer have any effect:

 + =ref.action.reset-floors=
 + =ref.action.reset-roofs=
 + =ref.action.reset-doors=
 + =ref.action.reset-glazing=
 + =ref.action.reset-walls=
 + =ref.action.set-heating-schedule=
 + =ref.action.set-heating-temperatures=

*** Version 6.4.0
**** Bugs fixed
***** Flags and reports work on def-action